apps/base/homepage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homepage
  labels:
    toolkit.fluxcd.io/tenant: dev-devops
